# ida-pro-mcp

./: .gitignore  .user-feedback.json  README.md  ida-plugin.json  mcp-plugin.py  pyproject.toml  server.py  test-standalone.py  uv-package.sh
.github/: FUNDING.yml
mcp/: __init__.py
src/ida_pro_mcp/: idalib_mcp_server.py  idalib_server.py  mcp-plugin.py  server.py
